fixed Java 17 tests